# SystemT

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake-multi-platform.yml
cli/: CMakeLists.txt
cli/src/: main.cpp
include/SystemT/: ASTPrint.hpp  Expr.hpp  Parser.hpp  Substitution.hpp  Tokenizer.hpp  TypeChecker.hpp  Types.hpp  builtins.hpp
src/: Expr.cpp  Parser.cpp  Substitution.cpp  Tokenizer.cpp  Types.cpp
tests/: CMakeLists.txt
tests/inputs/: a.st  ackermann.st
tests/src/: ReductionTests.cpp  TypeCheckerTests.cpp  lang.cpp
